--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <meta name="description" content="A simple app to help you automate the timing of a steeplechase">
+    <title>Steeplechase Timer</title>
   </head>
   <body>
     <div id="app"></div>
